--- a/index.html
+++ b/index.html
@@ -61,14 +61,21 @@
             <div class="col-lg-6">
               <div class="intro-text mb-4">
                 <h1 class="display-4">Aditya Nugraha</h1>
-                <h3 class="h3">Web Developer</h3>
+                <h3 class="h3">Web Developer | College Student</h3>
                 <p class="lead">
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                  Possimus reiciendis qui debitis sed! Laboriosam quo quis
-                  deserunt eveniet adipisci illo error, optio blanditiis? Optio
-                  laborum totam, accusamus dolores consequuntur incidunt.
+                  Seorang web developer yang sedang menjalankan kuliah sarjana
+                  jurusan Informatika di Universitas Bina Sarana Informatika dan
+                  memiliki minat dalam pengembangan web, portofolio online bisa
+                  menjadi alat yang sangat penting dalam menunjukkan
+                  kemampuanmu, baik dalam pengembangan front-end maupun
+                  back-end.
                 </p>
-                <button class="btn btn-primary" onclick="location.href='#kontak'">Kontak Saya</button>
+                <button
+                  class="btn btn-primary"
+                  onclick="location.href='#tentang'"
+                >
+                  Telusuri
+                </button>
               </div>
             </div>
             <div class="col-lg-6 text-center">
@@ -84,22 +91,59 @@
       </section>
       <!-- Tentang -->
       <section id="tentang" class="about py-5">
-        <div class="container text-center">
-          <h2 class="mb-4">Tentang</h2>
-          <p class="lead">
-            Saya adalah seorang web developer yang memiliki pengalaman dalam
-            mengembangkan berbagai aplikasi dan website. Saya menyukai tantangan
-            dan selalu berusaha untuk belajar hal baru.
-          </p>
+        <div class="container">
+          <h2 class="text-center mb-4">Tentang Saya</h2>
+          <div class="row">
+            <div class="col-md-6 mb-4">
+              <div class="card shadow-sm">
+                <div class="card-body">
+                  <h5 class="card-title">Biografi</h5>
+                  <p class="card-text">
+                    Saya lahir di Jakarta pada 8 September 1997. Saat ini, saya tengah menempuh pendidikan di Universitas Bina Sarana Informatika, jurusan Informatika. Dengan minat yang mendalam dalam pengembangan web, saya berkomitmen untuk terus belajar dan mengembangkan keterampilan saya di bidang ini. Portofolio online saya menjadi wadah untuk menunjukkan kemampuan saya dalam pengembangan aplikasi dan website.
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-6 mb-4">
+              <div class="card shadow-sm">
+                <div class="card-body">
+                  <h5 class="card-title">Pendidikan</h5>
+                  <ul class="list-unstyled">
+                    <li>
+                      <strong>Universitas:</strong> Universitas Bina Sarana
+                      Informatika
+                    </li>
+                    <li><strong>Jurusan:</strong> Informatika</li>
+                    <li><strong>Tahun:</strong> 2022 - Sekarang</li>
+                    <li>
+                      <strong>Kegiatan:</strong>
+                      <ul>
+                        <li>
+                          Kampus Merdeka Studi Independen PT Citra Gama Sakti
+                          <br />
+                          September 2024 - Desember 2024
+                        </li>
+                        <li>
+                          Digital Talent Scholarship Kominfo Oracle Academy
+                          Database Design dan Database Programming SQL <br />
+                          Maret 2024 - Juli 2024
+                        </li>
+                      </ul>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </section>
       <!-- Portofolio -->
       <section id="portofolio" class="portfolio py-5">
         <div class="container">
-            <h2 class="text-center mb-4">Portofolio</h2>
-            <p class="text-center mb-4">
-                Berikut adalah beberapa proyek yang telah saya kerjakan:
-            </p>
+          <h2 class="text-center mb-4">Portofolio</h2>
+          <p class="text-center mb-4">
+            Berikut adalah beberapa proyek yang telah saya kerjakan:
+          </p>
           <div class="row">
             <div class="col-md-4 mb-4">
               <div class="card h-100 shadow-sm">
@@ -117,8 +161,13 @@
                     deserunt consequuntur perferendis dolor similique fuga eaque
                     accusamus dolores.
                   </p>
-                  <div class="mt-auto text-center">
-                    <a href="#" class="btn btn-primary">Lihat Detail</a>
+                  <div class="mt-auto d-flex justify-content-start">
+                    <a
+                      href="#"
+                      class="text-secondary"
+                      style="text-decoration: none"
+                      >Lihat Detail</a
+                    >
                   </div>
                 </div>
               </div>
@@ -138,8 +187,13 @@
                     quidem blanditiis atque cum sunt, dolore a est maiores et
                     laborum voluptatum earum placeat perferendis. Vitae.
                   </p>
-                  <div class="mt-auto text-center">
-                    <a href="#" class="btn btn-primary">Lihat Detail</a>
+                  <div class="mt-auto d-flex justify-content-start">
+                    <a
+                      href="#"
+                      class="text-secondary"
+                      style="text-decoration: none"
+                      >Lihat Detail</a
+                    >
                   </div>
                 </div>
               </div>
@@ -160,8 +214,13 @@
                     officia! Itaque quibusdam dolore hic, magni nisi nesciunt
                     libero!
                   </p>
-                  <div class="mt-auto text-center">
-                    <a href="#" class="btn btn-primary">Lihat Detail</a>
+                  <div class="mt-auto d-flex justify-content-start">
+                    <a
+                      href="#"
+                      class="text-secondary"
+                      style="text-decoration: none"
+                      >Lihat Detail</a
+                    >
                   </div>
                 </div>
               </div>
@@ -216,8 +275,47 @@
       </section>
     </main>
     <footer class="bg-dark text-light text-center py-3">
-      <p>&copy; 2024 Aditya Nugraha. All Rights Reserved.</p>
+      <div class="container">
+        <div class="row">
+          <div class="col-12 mb-2">
+            <a
+              href="https://www.linkedin.com/in/adityanugraha"
+              target="_blank"
+              class="text-light mx-2"
+            >
+              <i class="fab fa-linkedin fa-lg"></i>
+            </a>
+            <a
+              href="https://www.instagram.com/adityanugraha"
+              target="_blank"
+              class="text-light mx-2"
+            >
+              <i class="fab fa-instagram fa-lg"></i>
+            </a>
+          </div>
+          <div class="col-12 mb-2">
+            <p>
+              Email:
+              <a href="mailto:adityanugraha1523@gmail.com" class="text-light"
+                >adityanugraha1523@gmail.com</a
+              >
+            </p>
+            <p>
+              Telepon:
+              <a href="tel:+6281287706160" class="text-light"
+                >+62 812-8770-6160</a
+              >
+            </p>
+          </div>
+          <div class="col-12">
+            <p>
+              &copy; 2024 Aditya Nugraha Portfolio Website. All Rights Reserved.
+            </p>
+          </div>
+        </div>
+      </div>
     </footer>
+    <!-- Scripts -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
