--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                 <div class="card-body">
                   <h5 class="card-title">Biografi</h5>
                   <p class="card-text">
-                    Saya lahir di Jakarta pada 8 September 1997. Saat ini, saya tengah menempuh pendidikan di Universitas Bina Sarana Informatika, jurusan Informatika. Dengan minat yang mendalam dalam pengembangan web, saya berkomitmen untuk terus belajar dan mengembangkan keterampilan saya di bidang ini. Portofolio online saya menjadi wadah untuk menunjukkan kemampuan saya dalam pengembangan aplikasi dan website.
+                    Saya lahir di Jakarta pada 8 September. Saat ini, saya tengah menempuh pendidikan di Universitas Bina Sarana Informatika, jurusan Informatika. Dengan minat yang mendalam dalam pengembangan web, saya berkomitmen untuk terus belajar dan mengembangkan keterampilan saya di bidang ini. Portofolio online saya menjadi wadah untuk menunjukkan kemampuan saya dalam pengembangan aplikasi dan website.
                   </p>
                 </div>
               </div>
